# sparse-probing-paper

./: .pre-commit-config.yaml  __init__.py  pyproject.toml  pyproject.yaml  requirements.txt  setup.py
sparse_probing_paper/: __init__.py  get_activations.py  load.py  make_feature_datasets.py  probing_experiment.py  run_ablation.py  save_weight_statistics.py
sparse_probing_paper/activations/: activation_all.py  activation_metrics.py  activation_subset.py  test.py
sparse_probing_paper/notebooks/: activation_dev.ipynb  basis_alignment.ipynb  counterfact_probing_results.ipynb  data_tables.ipynb  eos_plot.ipynb  factual_neurons.ipynb  find_neuron_stimulu_2.ipynb  find_neuron_stimulus.ipynb  mats_results.ipynb  monosemantic_investigation.ipynb  monosemantic_verification_lang.ipynb  natural_language_id_results.ipynb  pile_data.ipynb  suffix_results.ipynb
sparse_probing_paper/notebooks/wikidata/: wikidata_ablation_analysis.ipynb  wikidata_ablation_datasets.ipynb  wikidata_neurons.ipynb  wikidata_results.ipynb
sparse_probing_paper/probing_datasets/: counterfact.py  wikidata.py
